# agentic-ai-project

./: .gitignore  requirements.txt
aviation_mas_mvp/: env.example  pyproject.toml  requirements.txt
aviation_mas_mvp/approved_out/: approved_queue.jsonl
aviation_mas_mvp/aviation-openclaw/: Dockerfile  agent_task_brief.md  docker-compose.yml  env(1).example  run_agent_test.sh  test_tools.sh  tools_manifest.md  trim_tools.sh  wire_model.sh  wire_model_local.sh
aviation_mas_mvp/aviation-openclaw/aviation_mas_mvp/: __init__.py  featurize.py  orchestrator_sim.py  tools.py
aviation_mas_mvp/aviation-openclaw/config/: exec-approvals.json  openclaw.json.bak  openclaw.json.bak.1  openclaw.json.bak.2  openclaw.json.bak.3  openclaw.json.bak.4  openclaw.json.last-good  update-check.json
aviation_mas_mvp/aviation-openclaw/config/cron/: jobs-state.json  jobs.json  jobs.json.bak
aviation_mas_mvp/aviation-openclaw/workspace/: AGENTS.md  SOUL.md  TOOLS.md
aviation_mas_mvp/docker/: Dockerfile
aviation_mas_mvp/notebooks/: 01_deterministic_loop.ipynb  02_realdata_baseline.ipynb  03_agent_run.ipynb  04_full_pipeline.ipynb
aviation_mas_mvp/scripts/: agent_harness.py  approve.sh  discover_features.py  discovery_agent.py  evaluate_features.py  feature_transforms.py  featurize_spec.py  realdata.py  synthdata.py  tools.py  train_baseline.py  train_real_baseline.py
aviation_mas_mvp/scripts/multi_agent/: agent_harness.py  contract_net.py  mas_coordinator.py  mas_tools.py
aviation_mas_mvp/scripts/single_agent/: agent_harness.py
openclaw-docs-agent/: Dockerfile  README.md  (+3 more)
(+459 files in other folders)
